# OpenGL_Sandbox_Game

./: .gitignore  CMakeLists.txt  README.md
Modules/Audio/include/Audio/: AudioManager.h
Modules/Audio/src/: AudioManager.cpp
Modules/Core/include/Core/: GameCore.h  World.h
Modules/Core/src/: GameCore.cpp  World.cpp
Modules/Entities/include/Entities/: Effects.h  EntitySystem.h  GameEntities.h  Particle.h  Player.h  Projectile.h
Modules/Entities/include/Entities/Enemies/: Enemy.h  FlyingEye.h  Slime.h  Zombie.h
Modules/Entities/src/: Effects.cpp  EntitySystem.cpp  Particle.cpp  Player.cpp
Modules/Entities/src/Enemies/: Slime.cpp
Modules/IOSystem/include/IOSystem/: InputHandler.h  SystemContext.h
Modules/IOSystem/src/: InputHandler.cpp
Modules/Objects/include/Objects/: GameObjects.h  Inventory.h
Modules/Objects/src/: GameObjects.cpp  Inventory.cpp
Modules/Physics/include/Physics/: Colliders.h
Modules/Physics/src/: Colliders.cpp
Modules/Rendering/include/Rendering/: EBO.h  OpenGL_Renderer.h  SSBO.h  ShaderClass.h  Texture.h  UBO.h  VAO.h  VBO.h
Modules/Rendering/src/: EBO.cpp  OpenGL_Renderer.cpp  SSBO.cpp  ShaderClass.cpp  Texture.cpp  UBO.cpp  VAO.cpp  VBO.cpp  glad.c
Modules/UI/include/UI/: SDF_Font_Manager.h  UI_Renderer.h
Modules/UI/src/: SDF_Font_Manager.cpp  UI_Renderer.cpp
Modules/Utility/include/Utility/: AppliableComps.h  GameContext.h  Math.h  SmartPtr.h  SparseSet.h  Sprite.h  TextBufferBuilder.h  TimeManager.h
Modules/Utility/src/: TextBufferBuilder.cpp  TimeManager.cpp
Resources/SDF_Fonts/: glow.txt  outline.txt  verdana_SDF.atlas
Resources/shaders/: sdf_text.frag  sdf_text.vert  sprites.frag  sprites.vert  sprites_entity.vert  ui_sprites.frag  ui_sprites.vert
cmake/: ExternalLibs.cmake  GameModule.cmake
libraries/include/glad/: glad.h
src/: main.cpp
